--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.14.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
