fixed untracked files

--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
     "dayjs": "^1.9.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fibers": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "nuxt": "^2.14.5",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "secure-ls": "^1.2.6",
     "sequelize": "^6.3.5",
     "simple-browser-fingerprint": "^1.0.0",
+    "url": "^0.11.0",
     "vue": "^2.6.12",
     "vue-sweetalert2": "^3.0.8",
     "vuex-persistedstate": "^3.1.0"
