--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "nuxt build && gulp",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -24,6 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fibers": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-html-minifier": "^0.1.8",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nuxt": "^2.14.5",
