refactor to bootstrap 5

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@popperjs/core": "^2.6.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.2",
-    "bootstrap-vue": "^2.17.3",
+    "bootstrap": "^5.0.0-beta1",
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.0.0",
     "dayjs": "^1.9.5",
