--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dayjs": "^1.9.5",
     "dotenv": "^8.2.0",
