--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "flatpickr": "^4.6.9",
     "gulp": "^4.0.2",
     "gulp-html-minifier": "^0.1.8",
+    "hamburgers": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nuxt": "^2.14.5",
