--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "bootstrap": "5.0.0-beta3",
+    "bootstrap": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
